css bug with transaction docs  - Add important keyword to txt-phase-green class  - Add break in line when displaing documents for transaction item

--- a/src/scss/base/_colours.scss
+++ b/src/scss/base/_colours.scss
@@ -16,7 +16,7 @@ $border-grey: $grey-dark;
 .txt-grey { color: $grey-dark; } 
 .txt-grey-light { color: $grey-lighter; }
 .txt-white { color: $white; } 
-.txt-phase-green { color: $green; } 
+.txt-phase-green { color: $green!important; } 
 .txt-phase-amber { color: $amber; } 
 .txt-phase-red { color: $red; } 
 .txt-phase-blue { color: $blue; } 
